Fixed complete project
- Actuator locked down
- JWT secret externalized
- Per-user task ownership enforced everywhere
- The inverted create-task submit button and the phantom priority field are fixed
- Login now correctly returns 401 on bad credentials
- DTO layer entities no longer hit the wire, killing the mass-assignment risk
- Constructor injection throughout
- Server-side pagination
- Self-service registration
- Added Docker